sql/test/error/error13.exp


select * from t1 limit 10.0;
       ^
       |
        ----- ERROR
Error: line 3, characters 8-8:
Invalid limit
